# waitangi_water_models

./: .env.example  .gitignore  CLAUDE.md  PRD.txt  README.md  RESEARCH_QUESTIONS.md  pyproject.toml
docs/: SHALLOW_WATER_SIMULATION_JOURNEY.md  tracer-advection-design.md
scripts/: generate_mangrove_polygon.py  mangrove_finder.py  plot_river_data.py  simple_tidal_test.py  simulate.py  simulate_river_tracer.py  tidal_cycle_simulation.py  validate_geometry.py  visualize_tidal_extent.py
src/waitangi/: __init__.py  cli.py  test_api_keys.py
src/waitangi/core/: __init__.py  config.py  constants.py  types.py
src/waitangi/data/: __init__.py  elevation.py  estuary_geometry.py  gauge.py  imagery_water_extract.py  linz.py  nrc_hilltop.py  osm.py  rainfall.py  reference_points.py  tide.py  weather.py
src/waitangi/models/: __init__.py  geometry.py  river.py  tide.py  velocity.py  wind.py
src/waitangi/pipeline/: __init__.py  data.py  pipeline.py  renderer.py  riemann.py  simulation.py  video_writer.py
src/waitangi/simulation/: __init__.py  kayak.py  particles.py  runner.py  shallow_water.py  tracer.py
src/waitangi/viz/: __init__.py  animate.py  map_debug.py  maps.py  plots.py
tests/: __init__.py  test_geometry.py  test_integration.py  test_nrc_hilltop_api.py  test_river.py  test_simulation.py  test_tidal_velocity.py  test_tide.py
