[project]
name = "waitangi-water-models"
version = "0.1.0"
description = "GPU-accelerated kayak tidal simulator for the Waitangi River system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nathan Broadbent"}
]
keywords = ["simulation", "tidal", "kayak", "hydrodynamics", "gpu", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "jax==0.4.35",
    "jaxlib==0.4.35",
    "jax-metal==0.1.1",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "pandas>=2.2.0",
    "xarray>=2024.10.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "shapely>=2.0.0",
    "pyproj>=3.7.0",
    "geopandas>=1.0.0",
    "triangle>=20200424",
    "matplotlib>=3.9.0",
    "plotly>=5.24.0",
    "rich>=13.9.0",
    "typer>=0.13.0",
    "contextily>=1.7.0",
    "scikit-image>=0.25.2",
    "rioxarray>=0.19.0",
    "astronomix>=0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
viz = [
    "pyvista>=0.44.0",
]

[project.scripts]
waitangi = "waitangi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/waitangi"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.uv.sources]
# Use default PyPI sources

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["waitangi"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "jaxlib.*",
    "scipy.*",
    "shapely.*",
    "triangle.*",
    "geopandas.*",
    "plotly.*",
    "pyvista.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
